hard-gists/2aa430e00dde0cf905a9/run.log
=== Docker Run Log for 2aa430e00dde0cf905a9 ===
Started at: Mi 29. Okt 13:24:29 CET 2025

[2025-10-29 13:24:29] START: Running container for 2aa430e00dde0cf905a9
[2025-10-29 13:24:29] SUCCESS: Container 47e014709d9a1d76803b2b9c70335239adc77577173ffccf5cdb8a6d93c7e88e started for 2aa430e00dde0cf905a9
=== Container logs for 2aa430e00dde0cf905a9 ===
  File "/snippet.py", line 209
    print rot
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2aa430e00dde0cf905a9 ===
[2025-10-29 13:24:31] INFO: Container 47e014709d9a1d76803b2b9c70335239adc77577173ffccf5cdb8a6d93c7e88e has stopped
